--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     width: 80px;
 }
 
+#main .carousel-inner img {
+   max-height: 70vh;
+   object-fit: cover; 
+   filter: grayscale(70%);
+}
+
 #footer {
     background-color: #03091e;
     padding-top: 4px;
