--- a/style.css
+++ b/style.css
@@ -13,6 +13,26 @@
    filter: grayscale(70%);
 }
 
+#carousel {
+    position: relative;
+}
+
+#carousel .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+#carousel .overlay .container,
+#carousel .overlay .row {
+    height: 100%;
+}
+
+
 #footer {
     background-color: #03091e;
     padding-top: 4px;
